--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -513,158 +513,13 @@
        :config (leaf company-prescient
                  :ensure t
                  :custom ((company-prescient-mode . t)))
+       (leaf all-the-icons :ensure t)
        (leaf company-box
-         :url "https://github.com/seagle0128/.emacs.d/blob/master/lisp/init-company.el"
-         :when (version<= "26.1" emacs-version)
-         :disabled (eq window-system 'x)
+         :after all-the-icons
          :ensure t
-         :blackout company-box-mode
-         :defvar (company-box-icons-alist company-box-icons-all-the-icons)
-         :init (leaf all-the-icons
-                 :ensure t
-                 :require t)
-         :custom ((company-box-max-candidates . 50)
-                  (company-box-icons-alist    . 'company-box-icons-all-the-icons))
          :hook ((company-mode-hook . company-box-mode))
-         :config (when (memq window-system '(ns mac))
-                   (declare-function all-the-icons-faicon 'all-the-icons)
-                   (declare-function all-the-icons-material 'all-the-icons)
-                   (declare-function all-the-icons-octicon 'all-the-icons)
-                   (setq company-box-icons-all-the-icons `((Unknown       . ,(all-the-icons-material
-                                                                              "find_in_page"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2))
-                                                           (Text          . ,(all-the-icons-faicon
-                                                                              "text-width"
-                                                                              :height 0.85
-                                                                              :v-adjust -0.05))
-                                                           (Method        . ,(all-the-icons-faicon
-                                                                              "cube"
-                                                                              :height 0.85
-                                                                              :v-adjust -0.05
-                                                                              :face
-                                                                              'all-the-icons-purple))
-                                                           (Function      . ,(all-the-icons-faicon
-                                                                              "cube"
-                                                                              :height 0.85
-                                                                              :v-adjust -0.05
-                                                                              :face
-                                                                              'all-the-icons-purple))
-                                                           (Constructor   . ,(all-the-icons-faicon
-                                                                              "cube"
-                                                                              :height 0.85
-                                                                              :v-adjust -0.05
-                                                                              :face
-                                                                              'all-the-icons-purple))
-                                                           (Field         . ,(all-the-icons-octicon
-                                                                              "tag"
-                                                                              :height 0.85
-                                                                              :v-adjust 0
-                                                                              :face
-                                                                              'all-the-icons-lblue))
-                                                           (Variable      . ,(all-the-icons-octicon
-                                                                              "tag"
-                                                                              :height 0.85
-                                                                              :v-adjust 0
-                                                                              :face
-                                                                              'all-the-icons-lblue))
-                                                           (Class         . ,(all-the-icons-material
-                                                                              "settings_input_component"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2
-                                                                              :face
-                                                                              'all-the-icons-orange))
-                                                           (Interface     . ,(all-the-icons-material
-                                                                              "share"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2
-                                                                              :face
-                                                                              'all-the-icons-lblue))
-                                                           (Module        . ,(all-the-icons-material
-                                                                              "view_module"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2
-                                                                              :face
-                                                                              'all-the-icons-lblue))
-                                                           (Property      . ,(all-the-icons-faicon
-                                                                              "wrench"
-                                                                              :height 0.85
-                                                                              :v-adjust -0.05))
-                                                           (Unit          . ,(all-the-icons-material
-                                                                              "settings_system_daydream"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2))
-                                                           (Value         . ,(all-the-icons-material
-                                                                              "format_align_right"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2
-                                                                              :face
-                                                                              'all-the-icons-lblue))
-                                                           (Enum          . ,(all-the-icons-material
-                                                                              "storage"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2
-                                                                              :face
-                                                                              'all-the-icons-orange))
-                                                           (Keyword       . ,(all-the-icons-material
-                                                                              "filter_center_focus"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2))
-                                                           (Snippet       . ,(all-the-icons-material
-                                                                              "format_align_center"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2))
-                                                           (Color         . ,(all-the-icons-material
-                                                                              "palette"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2))
-                                                           (File          . ,(all-the-icons-faicon
-                                                                              "file-o"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.05))
-                                                           (Reference     . ,(all-the-icons-material
-                                                                              "collections_bookmark"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2))
-                                                           (Folder        . ,(all-the-icons-faicon
-                                                                              "folder-open"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.05))
-                                                           (EnumMember    . ,(all-the-icons-material
-                                                                              "format_align_right"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2
-                                                                              :face
-                                                                              'all-the-icons-lblue))
-                                                           (Constant      . ,(all-the-icons-faicon
-                                                                              "square-o"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.05))
-                                                           (Struct        . ,(all-the-icons-material
-                                                                              "settings_input_component"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2
-                                                                              :face
-                                                                              'all-the-icons-orange))
-                                                           (Event         . ,(all-the-icons-faicon
-                                                                              "bolt"
-                                                                              :height 0.85
-                                                                              :v-adjust -0.05
-                                                                              :face
-                                                                              'all-the-icons-orange))
-                                                           (Operator      . ,(all-the-icons-material
-                                                                              "control_point"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2))
-                                                           (TypeParameter . ,(all-the-icons-faicon
-                                                                              "arrows"
-                                                                              :height 0.85
-                                                                              :v-adjust -0.05))
-                                                           (Template      . ,(all-the-icons-material
-                                                                              "format_align_center"
-                                                                              :height 0.9
-                                                                              :v-adjust -0.2))))
-                   (setq company-box-icons-alist 'company-box-icons-all-the-icons)))
+         :custom (company-box-icons-alist    . 'company-box-icons-all-the-icons)
+         )
        (leaf company-quickhelp
          :when (display-graphic-p)
          :ensure t
@@ -761,7 +616,8 @@
        :ensure t
        :hook (prog-mode-hook . flycheck-mode)
        :custom ((flycheck-display-errors-delay . 0.3)
-                (flycheck-indication-mode . 'left-margin))
+                (flycheck-indication-mode . 'left-margin)
+                )
        :config
        (add-hook 'flycheck-mode-hook #'flycheck-set-indication-mode)
        (leaf flycheck-inline
@@ -856,7 +712,9 @@
                         (lsp-ui-doc-use-webkit        . nil)
                         (lsp-ui-peek-enable           . t)
                         (lsp-ui-peek-peek-height      . 20)
-                        (lsp-ui-peek-list-width       . 50))
+                        (lsp-ui-peek-list-width       . 50)
+                        (lsp-ui-sideline-enable       . nil)
+                        )
                :bind ((lsp-ui-mode-map ([remap xref-find-definitions] .
                                         lsp-ui-peek-find-definitions)
                                        ([remap xref-find-references] .
