--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -240,12 +240,12 @@
                                                                                             toggle-frame-maximized)))
    #+end_src
 ** font
+   lsp-ui-sideline trauncate when font size is set to 20 or more.
    #+begin_src emacs-lisp
      (leaf *font
        :when window-system
-       :config (add-to-list 'default-frame-alist '(font . "Cica-20")))
+       :config (add-to-list 'default-frame-alist '(font . "Cica-18")))
    #+end_src
-
 * authentication
   #+begin_src emacs-lisp
     (leaf *authentication
@@ -620,9 +620,9 @@
                 )
        :config
        (add-hook 'flycheck-mode-hook #'flycheck-set-indication-mode)
-       (leaf flycheck-inline
-         :ensure t
-         :hook (flycheck-mode-hook . flycheck-inline-mode))
+       ;; (leaf flycheck-inline
+       ;;   :ensure t
+       ;;   :hook (flycheck-mode-hook . flycheck-inline-mode))
        )
      (flycheck-define-checker textlint
        "A linter for Markdown."
@@ -692,7 +692,7 @@
        :custom ((lsp-completion-provider            . :none)
                 (lsp-keymap-prefix                  . "C-c l")
                 (lsp-log-io                         . t)
-                ;; (lsp-eldoc-render-all               . t)
+                (lsp-eldoc-render-all               . t)
                 (lsp-keep-workspace-alive           . nil)
                 (lsp-document-sync-method           . 2)
                 (lsp-response-timeout               . 5)
@@ -708,12 +708,16 @@
                         (lsp-ui-doc-include-signature . t)
                         (lsp-ui-doc-max-width         . 150)
                         (lsp-ui-doc-max-height        . 30)
-                        (lsp-ui-doc-use-childframe    . nil)
-                        (lsp-ui-doc-use-webkit        . nil)
+                        (lsp-ui-doc-show-with-cursor  . t)
                         (lsp-ui-peek-enable           . t)
                         (lsp-ui-peek-peek-height      . 20)
                         (lsp-ui-peek-list-width       . 50)
-                        (lsp-ui-sideline-enable       . nil)
+                        (lsp-ui-doc-enable            . nil)
+                        (lsp-ui-sideline-enable       . t)
+                        (lsp-ui-sideline-show-code-actions . t)
+                        (lsp-ui-sideline-show-diagnostics . t)
+                        (lsp-ui-sideline-diagnostic-max-lines . 30)
+                        (lsp-ui-sideline-show-hover . t)
                         )
                :bind ((lsp-ui-mode-map ([remap xref-find-definitions] .
                                         lsp-ui-peek-find-definitions)
@@ -722,6 +726,17 @@
                       (lsp-mode-map ("C-c s" . lsp-ui-sideline-mode)
                                     ("C-c d" . lsp-ui-doc-mode)))
                :hook ((lsp-mode-hook . lsp-ui-mode))))
+   #+end_src
+** grammarly
+   #+begin_src emacs-lisp
+     (leaf lsp-grammarly
+       :el-get
+       (emacs-grammarly/lsp-grammarly :type github :checkout "1e2aff23dfaf419bfae66718761a0eddbd6f613e")
+       :hook
+       ((text-mode-hook org-mode-hook markdown-mode-hook) . (lambda ()
+                                                              (require 'lsp-grammarly)
+                                                              (lsp-deferred)))
+       )
    #+end_src
 ** python-mode
    #+begin_src emacs-lisp
