--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -624,16 +624,16 @@
        ;;   :ensure t
        ;;   :hook (flycheck-mode-hook . flycheck-inline-mode))
        )
-     (flycheck-define-checker textlint
-       "A linter for Markdown."
-       :command ("textlint.sh" source)
-       :error-patterns
-       ((warning line-start (file-name) ":" line ":" column ": "
-                 (id (one-or-more (not (any " "))))
-                 (message (one-or-more not-newline)
-                          (zero-or-more "\n" (any " ") (one-or-more not-newline)))
-                 line-end))
-       :modes (text-mode markdown-mode gfm-mode org-mode))
+     ;; (flycheck-define-checker textlint
+     ;;   "A linter for Markdown."
+     ;;   :command ("textlint.sh" source)
+     ;;   :error-patterns
+     ;;   ((warning line-start (file-name) ":" line ":" column ": "
+     ;;             (id (one-or-more (not (any " "))))
+     ;;             (message (one-or-more not-newline)
+     ;;                      (zero-or-more "\n" (any " ") (one-or-more not-newline)))
+     ;;             line-end))
+     ;;   :modes (text-mode markdown-mode gfm-mode org-mode))
    #+end_src
 ** tree-sitter
    #+begin_src emacs-lisp
@@ -877,6 +877,17 @@
        :config
        (setq org-capture-templates `(("i" " Inbox" entry (file+headline org-gtd-file "Inbox")
                                       "** %^{Brief Description}"))))
+   #+end_src
+** org-pomodoro
+   #+begin_src emacs-lisp
+     (leaf org-pomodoro
+       :ensure t
+       :after org
+       :if (file-directory-p my:d:gtd)
+       :custom
+       (org-pomodoro-length . 50)
+       (org-promodoro-short-break-length . 10)
+       )
    #+end_src
 ** org-roam
    #+begin_src emacs-lisp
