--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -918,7 +918,7 @@
                      (save-excursion
                        (re-search-backward "^[0-9]+:[0-9]+-[0-9]+:[0-9]+ " nil t))
                      (insert (match-string 0)))))
-
+         (org-mac-iCal)
          )
        )
    #+end_src
