--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -742,7 +742,9 @@
 ** grammarly
    #+begin_src emacs-lisp
      (leaf lsp-grammarly
-       :when (string= "osx" (getenv "PLATFORM"))
+       :when (or (string= "osx" (getenv "PLATFORM"))
+                 (string= "linux" (getenv "PLATFORM"))
+                 )
        :ensure t
        ;; :el-get
        ;; (emacs-grammarly/lsp-grammarly :type github :checkout "1e2aff23dfaf419bfae66718761a0eddbd6f613e")
